wave/src/main/java/org/waveprotocol/wave/client/wavepanel/view/dom/full/Tags.css
/**
 * CSS for the tags panel.
 * Ported from Wiab.pro.
 */

.panel {
  border-top: 1px solid #B8C6D9;
  border-left: 1px solid #E4F1FE;
  background-color: #C9E2FC;
  overflow: hidden;
  min-width: 50px;
  bottom: 0;
  position: absolute;
  right: 0;
  left: 0;
  height: 36px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  z-index: 1;
}

.flow {
  overflow: auto;
  position: relative;
  padding-right: 4.5em;
}

.tag {
  float: left;
  line-height: 20px;
  margin: 8px 0 0 5px;
  padding: 0 1px 0 1px;
}

.normal {
  cursor: pointer;
  color: blue;
  text-decoration: underline;
}

.added {
  cursor: pointer;
  background-color: #ffff00;
  color: blue;
  text-decoration: underline;
}

.removed {
  cursor: default;
  background-color: #ffd0d0;
  color: black;
  text-decoration: line-through;
}

.title {
  float: left;
  line-height: 28px;
  margin: 4px 0 0 8px;
}

.toggleGroup {
  position: absolute;
  top: 0;
  cursor: pointer;
  line-height: 1;
}

.simple {
  position: absolute;
  padding: 8px 0 4px 4px;
  background-color: #c9e2fc;
  bottom: 0;
  width: 4em;
}

.extra {
  position: absolute;
  width: 5em;
  margin-left: 4px;
  padding-top: 13px;
}

.expandButton {
  display: inline-block;
  margin-right: 0.3em;
  width: 9px;
  height: 9px;
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAK0lEQVQY02NgGFbAmYGBgQeHHDMDA8N/HHIsDAwM/3DI/WdgYPiPQ44BAACiNAmzJyhx0gAAAABJRU5ErkJggg==) no-repeat;
}

.collapseButton {
  display: inline-block;
  margin-right: 0.3em;
  width: 9px;
  height: 9px;
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAALElEQVQY02NgGDaAmYGBgQeHHBMDA8N/bBIMDAz/cMj9Z2Bg+IdD7j8DAwMAOlUJdQgW5poAAAAASUVORK5CYII=) no-repeat;
}

.addButton {
  display: block;
  cursor: pointer;
  width: 22px;
  height: 22px;
  /* White plus on ocean-blue circle -- high contrast SVG icon */
  background: url(data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20width%3D%2722%27%20height%3D%2722%27%3E%3Ccircle%20cx%3D%2711%27%20cy%3D%2711%27%20r%3D%2711%27%20fill%3D%27%230077b6%27%2F%3E%3Cpath%20d%3D%27M11%205v12M5%2011h12%27%20stroke%3D%27%23fff%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27%2F%3E%3C%2Fsvg%3E) no-repeat center;
}

.addButtonPressed {
  display: block;
  cursor: pointer;
  width: 22px;
  height: 22px;
  /* White plus on darker ocean-blue circle -- pressed state */
  background: url(data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20width%3D%2722%27%20height%3D%2722%27%3E%3Ccircle%20cx%3D%2711%27%20cy%3D%2711%27%20r%3D%2711%27%20fill%3D%27%23005f8a%27%2F%3E%3Cpath%20d%3D%27M11%205v12M5%2011h12%27%20stroke%3D%27%23fff%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27%2F%3E%3C%2Fsvg%3E) no-repeat center;
}

.deleteButton {
  position: absolute;
  top: -3px;
  right: -10px;
  width: 9px;
  height: 9px;
}

